# Display2407

./: Display2407.code-workspace  platformio.ini
include/: lv_conf.h
src/: Archivos.cpp  base_datos._cpp  change_log.h  comm_dis.cpp  comm_dis.h  constantes.h  init_variables.cpp  main.cpp  menu.cpp  menu.h  menu_items.h  menu_tabla.h  struct_defines.h  teclado.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
src/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label2.c  ui_comp_label2.h  ui_comp_panel1.c  ui_comp_panel1.h  ui_comp_textarea2.c  ui_comp_textarea2.h
src/ui/fonts/: ui_font_OpenSans102.c  ui_font_OpenSans16bpp1.c  ui_font_OpenSans24.c  ui_font_OpenSans32.c  ui_font_OpenSans40.c  ui_font_OpenSans48bpp1.c  ui_font_OpenSans52.c  ui_font_OpenSans84bpp1.c  ui_font_OpenSans96bpp1.c  ui_font_OpenSansCM96.c  ui_font_OpenSansCR96.c  ui_font_OpenSansCSB30.c  ui_font_OpenSansCSB32.c  ui_font_OpenSansCSB42.c  ui_font_OpenSansCSB48.c  ui_font_OpenSansCSB96.c
src/ui/screens/: ui_Screen1.c  ui_Screen2.c
